# COMP3421-COMP9415-UNSW

./: README.md
ass1/: .gitignore  CMakeLists.txt  JUSTIFICATION.md  README.md  fetch_deps.ps1  fetch_deps.sh
ass1/src/: main.cpp
ass2/: CMakeLists.txt  JUSTIFICATION.md  README.md
ass2/cmake/: copy_resources.cmake
ass2/include/ass2/: camera.hpp  light.hpp  memes.hpp  primitives.hpp  renderer.hpp  scene.hpp
ass2/src/: camera.cpp  light.cpp  main.cpp  memes.cpp  primitives.cpp  renderer.cpp  scene.cpp
ass3/: CMakeLists.txt  JUSTIFICATION.md  README.md
ass3/include/ass3/: memes.hpp
ass3/src/: main.cpp  memes.cpp
cpp101/: .gitignore  CMakeLists.txt  README.md
cpp101/include/cpp101/: fold.hpp
cpp101/src/: main.cpp
git101/: first.txt  test_git.sh
tute01/: .gitignore  CMakeLists.txt  GIT101.md  SETUP.md
tute01/src/: main.cpp
tute02/: .gitignore  CMakeLists.txt  README.md
tute02/src/: simple_texture.cpp  simple_transforms.cpp
tute03/: CMakeLists.txt  README.md  fetch_deps.ps1
tute03/cmake/: copy_resources.cmake
tute03/include/tute03/: camera.hpp  cube.hpp
tute03/src/: camera.cpp  cube.cpp  main.cpp
tute04/: .gitignore  CMakeLists.txt  JUSTIFICATION.md  README.md
tute04/include/: euler_camera.hpp  memes.hpp  scene.hpp  shapes.hpp  static_mesh.hpp  texture_2d.hpp
tute04/src/: euler_camera.cpp  main.cpp  memes.cpp  scene.cpp  shapes.cpp  static_mesh.cpp  texture_2d.cpp
tute05/: CMakeLists.txt  README.md
tute05/include/tute05/: animator.hpp  camera.hpp  memes.hpp  model.hpp  renderer.hpp  scene.hpp
tute05/src/: animator.cpp  camera.cpp  main.cpp  memes.cpp  model.cpp  renderer.cpp  scene.cpp
tute07/: .gitignore  CMakeLists.txt  README.md
tute07/include/tute07/: camera.hpp  memes.hpp  primitives.hpp  renderer.hpp  scene.hpp
tute07/src/: camera.cpp  main.cpp  memes.cpp  primitives.cpp  renderer.cpp  scene.cpp
tute08/: CMakeLists.txt  README.md
tute08/include/tute08/: camera.hpp  light.hpp  memes.hpp  primitives.hpp  renderer.hpp  scene.hpp
tute08/src/: camera.cpp  light.cpp  main.cpp  memes.cpp  primitives.cpp  renderer.cpp  scene.cpp
tutorials/: .gitignore  .gitmodules  CMakeLists.txt  README.md
tutorials/week01/: CMakeLists.txt  README.md
tutorials/week01/include/: EBO.h  VAO.h  VBO.h  header.hpp  shaderClass.h
tutorials/week01/res/shaders/: shader.frag  shader.vert  shader2.frag  shader2.vert
tutorials/week01/src/: EBO.cpp  VAO.cpp  VBO.cpp  header.cpp  main.cpp  shaderClass.cpp
tutorials/week02/: CMakeLists.txt  README.md
tutorials/week02/src/: simple_texture.cpp
